<resources>
    <string name="app_name">CameraX Sample</string>
    <string name="take_photo">사진찍기</string>
    <string name="camera_permission_title">카메라 권한 필요</string>
    <string name="camera_permission_required">카메라 권한이 필요합니다.</string>
    <string name="camera_permission_rationale">사진을 촬영하려면 카메라 권한이 필요합니다. 권한을 허용해 주세요.</string>
    <string name="camera_permission_permanently_denied">카메라 권한이 영구적으로 거부되었습니다. 앱 설정에서 권한을 허용해 주세요.</string>
    <string name="required_permissions_title">필수 권한 필요</string>
    <string name="required_permissions_needed">카메라 사용을 위해 권한이 필요합니다.</string>
    <string name="required_permissions_rationale">카메라 촬영과 저장을 위해 필수 권한을 허용해 주세요.</string>
    <string name="required_permissions_permanently_denied">필수 권한이 영구적으로 거부되었습니다. 앱 설정에서 권한을 허용해 주세요.</string>
    <string name="retry_permission_request">다시 요청</string>
    <string name="open_settings">설정으로 이동</string>
    <string name="cancel">취소</string>
    <string name="cd_flash_toggle">플래시 모드 전환</string>
    <string name="msg_flash_not_supported">이 기기는 플래시를 지원하지 않습니다.</string>
    <string name="msg_camera_init_failed">카메라 초기화에 실패했습니다.</string>
    <string name="msg_photo_saved">사진이 저장되었습니다: %1$s</string>
    <string name="msg_photo_save_failed">사진 저장에 실패했습니다.</string>
    <string name="cd_exposure_up">노출 증가</string>
    <string name="cd_exposure_down">노출 감소</string>
    <string name="msg_focus_metering_failed">초점 맞추기에 실패했습니다.</string>
    <string name="msg_exposure_not_supported">이 기기는 노출 보정을 지원하지 않습니다.</string>
    <string name="preview_save">저장</string>
    <string name="preview_discard">삭제</string>
    <string name="preview_image">촬영 미리보기</string>
    <string name="msg_save_completed">저장 완료</string>
    <string name="cd_capture">촬영</string>
    <string name="msg_delete_completed">삭제 완료</string>
    <string name="saved_image_close">닫기</string>
    <string name="saved_image_content_description">저장된 사진</string>
    <string name="saved_image_back_to_camera">카메라로 돌아가기</string>
    <string name="msg_saved_image_load_failed">이미지를 불러올 수 없습니다.</string>
</resources>
